--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,28 @@ h1 {
     margin-bottom: 20px;
 }
 
+body {
+    background-color: #f4f4f8;
+    color: #333;
+    line-height: 1.5;
+    padding: 0;
+}
+
+header {
+    width:100%;
+    margin-bottom: 20px;
+    padding: 20px 0;
+    text-align: center;
+    background-color: #fff;
+    overflow: hidden;
+}
+
+header nav{
+    width:100%;
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
 main {
     max-width: 800px;
     margin: 0 auto; /* 居中主内容区域 */
@@ -46,17 +68,17 @@ p {
 }
 
 button {
-    background-color: #2c89a0; /* 选中的宁静蓝色 */
-    color: #fff; /* 按钮上的文字颜色 */
-    border: none;
+    color: #247a8c;
+    border: solid 1px #2c89a0;
+    background-color: #fff;
     padding: 10px 20px;
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s;
 }
-
 button:hover {
-    background-color: #247a8c; /* 按钮hover状态时的颜色 */
+    background-color: #247a8c;
+    color: white;
 }
 
 footer {
@@ -65,22 +87,45 @@ footer {
 }
 
 /* Country list styles */
+
 .country-list {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-    margin: 20px 0;
-    justify-content: center; /* 让国家列表居中 */
+    float: left;
+    width: 100%;
+    margin-top: 10px;
 }
-
 .country-list a {
-    background-color: #e0e0e0; /* 轻微的灰色背景 */
-    padding: 5px 15px;
-    border-radius: 5px; /* 圆角 */
-    color: #333;
+    display: block;
+    float: left;
+    height: 34px;
+    line-height: 34px;
+    margin-right: 10px;
+    margin-top: 10px;
+    padding: 0 10px;
+    background-color: #e0e0e0;
+    border-radius: 5px;
     transition: background-color 0.3s;
+    color: #333;
+}
+.country-list a.curr{
+    color:#2c89a0;
+    font-weight: bold;
+}
+.country-list a:hover {
+    background-color: #d0d0d0;
 }
 
-.country-list a:hover {
-    background-color: #d0d0d0; /* 鼠标悬停时的背景色 */
+.logo{
+    float: left;
+    font-size: 22px;
+    font-weight: bold;
+    font-style: normal;
+    height: 34px;
+    line-height: 34px;
+    background-color: black;
+    padding: 0 8px;
+    border-radius: 6px;
+    margin: 0;
+}
+.logo a{
+    color:white;
 }
