--- a/styles.css
+++ b/styles.css
@@ -86,6 +86,21 @@ footer {
     text-align: center;
 }
 
+.language-list{
+    float: right;
+}
+.language-list a{
+    margin-left: 10px;
+    color: #666;
+}
+.language-list a.curr{
+    color: #333;
+    font-weight: bold;
+}
+.language-list a:hover{
+    color: #247a8c;
+}
+
 /* Country list styles */
 
 .country-list {
